# serpinskiTriangle

./: ArialFont.h  CMakeLists.txt  main.cpp
